--- a/pom.xml
+++ b/pom.xml
@@ -47,12 +47,12 @@
     <dependency>
 	  <groupId>com.amazonaws</groupId>
 	  <artifactId>aws-java-sdk-lambda</artifactId>
-	  <version>1.10.4.1</version>
+	  <version>1.11.6</version>
 	</dependency>
 	<dependency>
 	  <groupId>com.amazonaws</groupId>
 	  <artifactId>aws-java-sdk-s3</artifactId>
-	  <version>1.10.4.1</version>
+	  <version>1.11.6</version>
 	</dependency>
     <dependency>
       <groupId>junit</groupId>
@@ -100,6 +100,9 @@
             <plugin>
   			<groupId>org.apache.maven.plugins</groupId>
   			<artifactId>maven-javadoc-plugin</artifactId>
+                <configuration>
+                    <skip>true</skip>
+                </configuration>
 			<executions>
 			    <execution>
 			      <id>attach-javadocs</id>
